@@ -93,7 +93,7 @@ Dragging_info::Dragging_info
 			button->push();
 					// Pushed button, so make noise.
 			Audio::get_ptr()->play_sound_effect(
-					Audio::game_sfx(96));
+					Audio::game_sfx(73));
 			gwin->set_painted();
 			}
 		else if (gump->is_draggable())
